Changed gameover font size on mobile devices

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div id="game-over">
             <p>Here you met the end with</p>
-            <h1></h1>
+            <h1>183857 pts!</h1>
             <button>Play agian!</button>
         </div>
     </div>
