Changed font size of cell

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 <body>
     <div id="app">
         <div id="header">
-            <h1>0</h1>
+            <div id="wrapper">
+                <h1>0</h1>
+                <h2>Best: 121451508</h2>
+            </div>
+            <div id="buttons">
+                <div class="button">
+                    <i class="fas fa-paint-roller"></i>
+                </div>
+            </div>
         </div>
         <div id="board">
             <div class="cell">
