Created local storage best score

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="header">
             <div id="wrapper">
                 <h1>0</h1>
-                <h2>Best: 121451508</h2>
+                <h2 id="best-score">Best: 0</h2>
             </div>
             <div id="buttons">
                 <div class="button">
