Added show board feature

--- a/index.html
+++ b/index.html
@@ -110,8 +110,12 @@
         <div id="game-over">
             <p>Here you met the end with</p>
             <h1>183857 pts!</h1>
-            <button>Play agian!</button>
+            <div id="wrapper">
+                <button>Play agian</button>
+                <button>Show board</button>
+            </div>
         </div>
+        <button id="hidden-play-again-button">Play agian!</button>
     </div>
     <script type="module" src="main.js"></script>
 </body>
